fix: resolve conflict in nav file, update tx page

--- a/src/common/navigation.yaml
+++ b/src/common/navigation.yaml
@@ -63,6 +63,7 @@ sections:
               - path: /atlas-overview
               - path: /atlas-how-it-works
               - path: /atlas-usage
+              - path: /broadcasting-transactions
               - path: /install-api
               - path: /installing-memcached
       - path: /stacks-wallet
