fix: changing nav url for API references

--- a/src/common/navigation.yaml
+++ b/src/common/navigation.yaml
@@ -108,7 +108,7 @@ sections:
         pages:
           - path: /blockstack-cli
           - path: /language-clarity
-          - path: /stacks-blockchain
+          - path: /stacks-blockchain-api
           - external:
               href: 'https://blockstack.github.io/blockstack.js/'
               title: blockstack.js
