--- a/src/common/navigation.yaml
+++ b/src/common/navigation.yaml
@@ -12,6 +12,7 @@ sections:
               - path: /hello-world-tutorial
               - path: /counter-tutorial
               - path: /testing-contracts
+              - path: /public-registry-tutorial
               - path: /signing-transactions
       - path: /mining # is an overview page
 
