feat: add stacking reference page
fixing #812

in reference to: https://github.com/blockstack/stacks-blockchain/pull/1957/

--- a/src/common/navigation.yaml
+++ b/src/common/navigation.yaml
@@ -110,6 +110,7 @@ sections:
         pages:
           - path: /blockstack-cli
           - path: /language-clarity
+          - path: /stacking-contract
           - path: /stacks-blockchain-api
           - external:
               href: 'https://blockstack.github.io/blockstack.js/'
