Adding sidebar link to updated docker instructions
- rename docker.md to running-in-docker.md to be more clear

--- a/src/common/navigation.yaml
+++ b/src/common/navigation.yaml
@@ -60,6 +60,7 @@ sections:
               - path: /managing-accounts
               - path: /sending-tokens
               - path: /running-testnet-node
+              - path: /running-in-docker
               - path: /integrate-stacking
           - title: Stacks 1.0
             pages:
