docs: adding new doc for stack local development

--- a/src/common/navigation.yaml
+++ b/src/common/navigation.yaml
@@ -54,6 +54,7 @@ sections:
           - path: /transactions
           - path: /network
           - path: /stacking
+          - path: /local-development
         sections:
           - title: Tutorials
             pages:
