Proof of Transfer overview (first draft)

--- a/src/common/navigation.yaml
+++ b/src/common/navigation.yaml
@@ -17,6 +17,9 @@ sections:
 
   - title: Technology
     pages:
+      - path: /pox
+        pages:
+          - path: /overview
       - path: /authentication
         pages:
           - path: /overview
