docs: updating examples, moving page to references

--- a/src/common/navigation.yaml
+++ b/src/common/navigation.yaml
@@ -54,7 +54,6 @@ sections:
           - path: /network
           - path: /stacking
           - path: /local-development
-          - path: /configurations
         sections:
           - title: Tutorials
             pages:
@@ -116,6 +115,7 @@ sections:
           - external:
               href: 'https://blockstack.github.io/stacks.js/'
               title: Stacks.js
+          - path: /node-configuration
           - path: /faqs
           - path: /glossary
           - path: /deploy-tips
