--- a/src/common/navigation.yaml
+++ b/src/common/navigation.yaml
@@ -112,10 +112,10 @@ sections:
           - path: /language-clarity
           - path: /stacking-contract
           - path: /stacks-blockchain-api
+          - path: /stacks-node-configuration
           - external:
               href: 'https://blockstack.github.io/stacks.js/'
               title: Stacks.js
-          - path: /node-configuration
           - path: /faqs
           - path: /glossary
           - path: /deploy-tips
