feat: update links, reorg top-lvl nav, fix overview

--- a/src/common/navigation.yaml
+++ b/src/common/navigation.yaml
@@ -1,12 +1,42 @@
 sections:
   - pages:
       - path: /
-      - path: /build-an-app # is an overview page
-      - path: /smart-contracts
+      - path: /understand-stacks
+        pages:
+          - path: /overview
+          - path: /testnet
+          - path: /proof-of-transfer
+          - path: /mining
+          - path: /accounts
+          - path: /transactions
+          - path: /network
+          - path: /stacking
+          - path: /local-development
+          - path: /technical-specs
+        sections:
+          - title: Tutorials
+            pages:
+              - path: /managing-accounts
+              - path: /sending-tokens
+              - path: /running-testnet-node
+              - path: /integrate-stacking
+          - title: Stacks 1.0
+            pages:
+              - path: /stacks-1.0-info
+              - path: /best-practices
+              - path: /wire-format
+              - path: /atlas-overview
+              - path: /atlas-how-it-works
+              - path: /atlas-usage
+              - path: /install-api
+              - path: /installing-memcached
+      - path: /build-apps # is an overview page
+      - path: /write-smart-contracts
         pages:
           - path: /overview
           - path: /principals
-          - path: /clarity-values
+          - path: /values
+          - path: /cli-wallet-quickstart
         sections:
           - title: Tutorials
             pages:
@@ -15,7 +45,7 @@ sections:
               - path: /testing-contracts
               - path: /public-registry-tutorial
               - path: /signing-transactions
-      - path: /mining # is an overview page
+      - path: /start-mining # is an overview page
 
   - title: Technology
     pages:
@@ -46,35 +76,6 @@ sections:
           - title: Tutorials
             pages:
               - path: /integrate-indexing
-      - path: /stacks-blockchain
-        pages:
-          - path: /overview
-          - path: /testnet
-          - path: /proof-of-transfer
-          - path: /mining
-          - path: /accounts
-          - path: /transactions
-          - path: /network
-          - path: /stacking
-          - path: /local-development
-          - path: /technical-specs
-        sections:
-          - title: Tutorials
-            pages:
-              - path: /managing-accounts
-              - path: /sending-tokens
-              - path: /running-testnet-node
-              - path: /integrate-stacking
-          - title: Stacks 1.0
-            pages:
-              - path: /stacks-1.0-info
-              - path: /best-practices
-              - path: /wire-format
-              - path: /atlas-overview
-              - path: /atlas-how-it-works
-              - path: /atlas-usage
-              - path: /install-api
-              - path: /installing-memcached
       - path: /naming-system # is an overview page
       - path: /storage-hubs # this seems out of date, kill?
         pages:
