--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@blockstack/docs",
   "version": "1.0.0",
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "dependencies": {
     "@docsearch/css": "^1.0.0-alpha.27",
     "@docsearch/react": "^1.0.0-alpha.27",
