--- a/src/common/navigation.yaml
+++ b/src/common/navigation.yaml
@@ -100,6 +100,7 @@ sections:
           - path: /faqs
           - path: /glossary
           - path: /deploy-tips
+          - path: /clarity-js/clarity-js
         sections:
           - title: Clarity Language
             usePageTitles: true
@@ -108,6 +109,7 @@ sections:
               - path: /language-types
               - path: /language-keywords
               - path: /language-functions
+
   - title: Ecosystem
     pages:
       - path: /overview #pbc et al
