docs: add mining guide
Fixes blockstack/docs#824

--- a/src/common/navigation.yaml
+++ b/src/common/navigation.yaml
@@ -50,6 +50,7 @@ sections:
           - path: /overview
           - path: /testnet
           - path: /proof-of-transfer
+          - path: /mining
           - path: /accounts
           - path: /transactions
           - path: /network
