--- a/src/common/navigation.yaml
+++ b/src/common/navigation.yaml
@@ -55,6 +55,7 @@ sections:
           - path: /network
           - path: /stacking
           - path: /local-development
+          - path: /technical-specs
         sections:
           - title: Tutorials
             pages:
