Add page to left nav, more details to Stacking.

--- a/src/common/navigation.yaml
+++ b/src/common/navigation.yaml
@@ -54,6 +54,7 @@ sections:
           - path: /network
           - path: /stacking
           - path: /local-development
+          - path: /technical-specs
         sections:
           - title: Tutorials
             pages:
