rename guide and add to navigation

--- a/src/common/navigation.yaml
+++ b/src/common/navigation.yaml
@@ -6,6 +6,7 @@ sections:
         pages:
           - path: /overview
           - path: /principals
+          - path: /clarity-values
         sections:
           - title: Tutorials
             pages:
