fix: bump next.js version

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "mdi-react": "7.3.0",
     "micro-memoize": "^4.0.9",
     "modern-normalize": "^1.0.0",
-    "next": "^10.0.1",
+    "next": "^10.0.2-canary.18",
     "next-fonts": "^1.4.0",
     "next-mdx-remote": "^1.0.0",
     "nprogress": "^0.2.0",
@@ -102,18 +102,18 @@
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.3.0",
     "next-transpile-modules": "^4.1.0",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "rimraf": "^3.0.2",
     "tsconfig-paths-webpack-plugin": "^3.3.0"
   },
   "private": true,
   "scripts": {
-    "build": "yarn clean:build-files && next telemetry disable && NODE_ENV=production next build",
+    "build": "next build",
     "build:analyze": "yarn clean:build-files && next telemetry disable && NODE_ENV=production ANALYZE=true next build",
-    "start": "next telemetry disable && NODE_ENV=production next start",
+    "start": "next start",
     "clean:build-files": "rimraf .next && rimraf .cache",
-    "dev": "yarn clean:build-files && next dev",
+    "dev": "next dev",
     "build:cli-reference": "blockstack-cli docs > src/_data/cli-reference.json",
     "export": "next export",
     "lint": "yarn lint:eslint && yarn lint:prettier",
