--- a/package.json
+++ b/package.json
@@ -128,7 +128,8 @@
     "lint:prettier:fix": "prettier --write \"src/**/*.{ts,tsx,md,mdx}\" *.js",
     "typecheck": "tsc --noEmit",
     "typecheck:watch": "npm run typecheck -- --watch",
-    "check:urls": "find . -type f -name '*.md' ! -path './node_modules/*' ! -path './_site/*' | xargs -L1 npx markdown-link-check -q -c mlc_config.json"
+    "check:urls": "find . -type f -name '*.md' ! -path './node_modules/*' ! -path './_site/*' | xargs -L1 npx markdown-link-check -q -c mlc_config.json",
+    "vale:check": "vale --sort --config='.vale/vale.ini' --glob='*.{md}' ./src/pages"
   },
   "husky": {
     "hooks": {
