fix: dev task needs to clear cache

--- a/package.json
+++ b/package.json
@@ -109,11 +109,11 @@
   },
   "private": true,
   "scripts": {
-    "build": "next build",
+    "build": "yarn clean:build-files && next telemetry disable && NODE_ENV=production next build",
     "build:analyze": "yarn clean:build-files && next telemetry disable && NODE_ENV=production ANALYZE=true next build",
-    "start": "next start",
+    "start": "next telemetry disable && NODE_ENV=production next start",
     "clean:build-files": "rimraf .next && rimraf .cache",
-    "dev": "next dev",
+    "dev": "yarn clean:build-files && next dev",
     "build:cli-reference": "blockstack-cli docs > src/_data/cli-reference.json",
     "export": "next export",
     "lint": "yarn lint:eslint && yarn lint:prettier",
