--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "@hashicorp/remark-plugins": "^3.0.0",
     "@mdx-js/loader": "1.6.21",
     "@mdx-js/mdx": "^1.6.16",
-    "@mdx-js/react": "^1.6.16",
+    "@mdx-js/react": "^1.6.22",
     "@next/mdx": "^10.0.3",
     "@reach/accordion": "^0.12.1",
     "@reach/tooltip": "^0.12.1",
-    "@stacks/ui": "^3.0.0-alpha.16",
-    "@stacks/ui-core": "^1.0.0-beta.6",
+    "@stacks/ui": "^6.0.0",
+    "@stacks/ui-core": "^6.0.0",
     "@styled-system/theme-get": "^5.1.2",
     "@types/mdx-js__react": "^1.5.2",
     "@types/node": "^14.10.1",
@@ -76,7 +76,7 @@
     "remark-unwrap-images": "2.0.0",
     "remark-vscode": "^1.0.0-beta.2",
     "strip-markdown": "^4.0.0",
-    "stylis": "^4.0.2",
+    "stylis": "^4.0.4",
     "swr": "^0.3.2",
     "turndown": "^7.0.0",
     "typescript": "^4.0.2",
