--- a/package.json
+++ b/package.json
@@ -7,28 +7,29 @@
   "dependencies": {
     "@docsearch/css": "^1.0.0-alpha.27",
     "@docsearch/react": "^1.0.0-alpha.27",
-    "@emotion/babel-plugin": "^11.0.0-next.17",
+    "@emotion/babel-plugin": "^11.1.2",
     "@emotion/babel-preset-css-prop": "^11.0.0-next.10",
     "@emotion/cache": "^11.0.0-next.16",
     "@emotion/core": "^11.0.0-next.10",
     "@emotion/css": "^11.0.0-next.17",
-    "@emotion/react": "^11.0.0-next.17",
+    "@emotion/react": "^11.1.2",
     "@emotion/server": "^11.0.0-next.17",
     "@hashicorp/remark-plugins": "^3.0.0",
-    "@mdx-js/loader": "1.6.21",
-    "@mdx-js/mdx": "^1.6.16",
+    "@mdx-js/loader": "1.6.22",
+    "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@next/mdx": "^10.0.3",
     "@reach/accordion": "^0.12.1",
     "@reach/tooltip": "^0.12.1",
-    "@stacks/ui": "^6.0.0",
-    "@stacks/ui-core": "^6.0.0",
+    "@stacks/ui": "^7.0.0",
+    "@stacks/ui-core": "^7.0.0",
     "@styled-system/theme-get": "^5.1.2",
+    "@tabler/icons": "^1.37.0",
     "@types/mdx-js__react": "^1.5.2",
     "@types/node": "^14.10.1",
     "@types/nprogress": "^0.2.0",
     "@types/reach__tooltip": "^0.2.0",
-    "algoliasearch": "^4.5.1",
+    "algoliasearch": "^4.8.3",
     "babel-plugin-macros": "^3.0.0",
     "cache-manager": "^3.4.0",
     "cache-manager-fs-hash": "^0.0.9",
@@ -79,14 +80,14 @@
     "remark-unwrap-images": "2.0.0",
     "remark-vscode": "^1.0.0-beta.2",
     "strip-markdown": "^4.0.0",
-    "stylis": "^4.0.4",
+    "stylis": "^4.0.6",
     "swr": "^0.3.2",
     "turndown": "^7.0.0",
     "typescript": "^4.0.2",
     "unified-vscode": "^1.0.0-beta.2",
     "unist-builder": "^2.0.3",
     "unist-util-is": "^4.0.2",
-    "unist-util-select": "^3.0.1",
+    "unist-util-select": "^3.0.3",
     "unist-util-visit": "^2.0.3",
     "use-events": "^1.4.2",
     "use-is-in-viewport": "^1.0.9",
