--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.3.0",
+    "markdown-link-check": "^3.8.5",
     "next-transpile-modules": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -126,7 +127,8 @@
     "lint:prettier": "prettier --check \"src/**/*.{ts,tsx,md,mdx}\" *.js",
     "lint:prettier:fix": "prettier --write \"src/**/*.{ts,tsx,md,mdx}\" *.js",
     "typecheck": "tsc --noEmit",
-    "typecheck:watch": "npm run typecheck -- --watch"
+    "typecheck:watch": "npm run typecheck -- --watch",
+    "check:markdown": "find . -type f -name '*.md' ! -path './node_modules/*' ! -path './_site/*' | xargs -L1 npx markdown-link-check -q -c mlc_config.json"
   },
   "husky": {
     "hooks": {
