feat: rename action, change log to suggestion

--- a/.vale/vale.ini
+++ b/.vale/vale.ini
@@ -2,7 +2,7 @@
 # (the "global" section).
 
 StylesPath = styles
-MinAlertLevel = error
+MinAlertLevel = suggestion
 
 Vocab = docs
 
@@ -10,7 +10,7 @@ Vocab = docs
 # Format associations appear under
 # the optional "formats" section.
 
-[*.{md}]
+[md]
 BasedOnStyles = Google
 
 [*]
