feat: update vale config

--- a/.vale/vale.ini
+++ b/.vale/vale.ini
@@ -1,19 +1,9 @@
-# Core settings appear at the top
-# (the "global" section).
-
 StylesPath = styles
 MinAlertLevel = suggestion
-
 Vocab = docs
 
 [formats]
-# Format associations appear under
-# the optional "formats" section.
-
-[md]
-BasedOnStyles = Google
+mdx = md
 
 [*]
-# Format-specific settings appear
-# under a user-provided "glob"
-# pattern.
+BasedOnStyles = Google
