fix: only run stylechecks for non-forked PRs
Co-authored-by: Charlie <2747302+CharlieC3@users.noreply.github.com>

--- a/.github/workflows/stylecheck-prs.yml
+++ b/.github/workflows/stylecheck-prs.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   stylecheck:
     runs-on: ubuntu-latest
+    if: github.event.pull_request.head.repo.full_name == github.repository
     steps:
       - name: checkout
         uses: actions/checkout@v2
