docs: mainnet changes for running node and miner

--- a/src/common/navigation.yaml
+++ b/src/common/navigation.yaml
@@ -20,6 +20,7 @@ sections:
             pages:
               - path: /managing-accounts
               - path: /sending-tokens
+              - path: /running-mainnet-node
               - path: /running-testnet-node
               - path: /integrate-stacking
               - path: /stacking-using-CLI
@@ -47,7 +48,10 @@ sections:
               - path: /signing-transactions
               - path: /public-registry-tutorial
       - path: /build-apps # is an overview page
-      - path: /start-mining # is an overview page
+      - path: /start-mining
+        pages:
+          - path: /mainnet
+          - path: /testnet
 
   - title: Technology
     pages:
