--- a/package.json
+++ b/package.json
@@ -9,28 +9,28 @@
     "@docsearch/react": "^1.0.0-alpha.27",
     "@emotion/babel-plugin": "^11.1.2",
     "@emotion/babel-preset-css-prop": "^11.0.0-next.10",
-    "@emotion/cache": "^11.0.0-next.16",
+    "@emotion/cache": "^11.1.3",
     "@emotion/core": "^11.0.0-next.10",
-    "@emotion/css": "^11.0.0-next.17",
-    "@emotion/react": "^11.1.2",
+    "@emotion/css": "^11.1.3",
+    "@emotion/react": "^11.1.4",
     "@emotion/server": "^11.0.0-next.17",
-    "@hashicorp/remark-plugins": "^3.0.0",
+    "@hashicorp/remark-plugins": "^3.1.0",
     "@mdx-js/loader": "1.6.22",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "@next/mdx": "^10.0.3",
+    "@next/mdx": "^10.0.4",
     "@reach/accordion": "^0.12.1",
     "@reach/tooltip": "^0.12.1",
-    "@stacks/ui": "^7.0.0",
+    "@stacks/ui": "^7.3.0",
     "@stacks/ui-core": "^7.0.0",
     "@styled-system/theme-get": "^5.1.2",
-    "@tabler/icons": "^1.37.0",
+    "@tabler/icons": "^1.38.1",
     "@types/mdx-js__react": "^1.5.2",
-    "@types/node": "^14.10.1",
+    "@types/node": "^14.14.20",
     "@types/nprogress": "^0.2.0",
     "@types/reach__tooltip": "^0.2.0",
     "algoliasearch": "^4.8.3",
-    "babel-plugin-macros": "^3.0.0",
+    "babel-plugin-macros": "^3.0.1",
     "cache-manager": "^3.4.0",
     "cache-manager-fs-hash": "^0.0.9",
     "capsize": "^1.1.0",
@@ -51,12 +51,12 @@
     "mdi-react": "7.4.0",
     "micro-memoize": "^4.0.9",
     "modern-normalize": "^1.0.0",
-    "next": "^10.0.2-canary.18",
+    "next": "^10.0.5",
     "next-fonts": "^1.4.0",
     "next-mdx-remote": "^1.0.0",
     "nprogress": "^0.2.0",
     "p-all": "^3.0.0",
-    "preact": "^10.4.8",
+    "preact": "^10.5.9",
     "preact-render-to-string": "^5.1.4",
     "preact-ssr-prepass": "^1.1.1",
     "prettier": "^2.1.1",
@@ -81,13 +81,13 @@
     "remark-vscode": "^1.0.0-beta.2",
     "strip-markdown": "^4.0.0",
     "stylis": "^4.0.6",
-    "swr": "^0.3.2",
+    "swr": "^0.3.11",
     "turndown": "^7.0.0",
-    "typescript": "^4.0.2",
+    "typescript": "^4.1.3",
     "unified-vscode": "^1.0.0-beta.2",
     "unist-builder": "^2.0.3",
     "unist-util-is": "^4.0.2",
-    "unist-util-select": "^3.0.3",
+    "unist-util-select": "^3.0.4",
     "unist-util-visit": "^2.0.3",
     "use-events": "^1.4.2",
     "use-is-in-viewport": "^1.0.9",
@@ -95,13 +95,13 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.10.4",
-    "@blockstack/eslint-config": "^1.0.5",
     "@blockstack/prettier-config": "^0.0.6",
     "@next/bundle-analyzer": "^10.0.3",
+    "@stacks/eslint-config": "^1.0.7",
     "@typescript-eslint/eslint-plugin": "^4.1.0",
     "@typescript-eslint/parser": "^4.1.0",
     "babel-plugin-styled-components": "^1.11.0",
-    "eslint": "^7.9.0",
+    "eslint": "^7.17.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.3.0",
@@ -135,6 +135,9 @@
     "hooks": {
       "pre-commit": "yarn lint:prettier"
     }
+  },
+  "resolutions": {
+    "eslint": "^7.17.0"
   },
   "prettier": "@blockstack/prettier-config"
 }
