--- a/src/common/navigation.yaml
+++ b/src/common/navigation.yaml
@@ -78,10 +78,10 @@ sections:
                   href: 'https://github.com/blockstack/stacks.js/tree/master/packages/network#stacksnetwork'
                   title: network
               - external:
-                  href: 'https://github.com/blockstack/stacks.js/tree/master/packages/stacking#stacksstacking'
+                  href: 'https://github.com/blockstack/stacks.js/tree/master/packages/stacking#stacksstacking-'
                   title: stacking
               - external:
-                  href: 'https://github.com/blockstack/stacks.js/tree/master/packages/transactions#stackstransactions'
+                  href: 'https://github.com/blockstack/stacks.js/tree/master/packages/transactions#stackstransactions-'
                   title: transactions
 
           - title: Protocols
