--- a/src/common/navigation.yaml
+++ b/src/common/navigation.yaml
@@ -98,7 +98,6 @@ sections:
         usePageTitles: true
         pages:
           - path: /stacks-cli
-          - path: /stacking-contract
           - external:
               href: 'https://blockstack.github.io/stacks-blockchain-api/'
               title: Stacks Blockchain API
@@ -110,6 +109,11 @@ sections:
           - path: /glossary
           - path: /deploy-tips
         sections:
+          - title: Contracts
+            usePageTitles: true
+            pages:
+              - path: /bns-contract
+              - path: /stacking-contract
           - title: Clarity Language
             usePageTitles: true
             pages:
