chore: updated link checking to point at the docs.stacks.co domain

--- a/mlc_config.json
+++ b/mlc_config.json
@@ -10,11 +10,11 @@
   "replacementPatterns": [
     {
       "pattern": "^/public/images",
-      "replacement": "https://docs.blockstack.org/images"
+      "replacement": "https://docs.stacks.co/images"
     },
     {
       "pattern": "^/",
-      "replacement": "https://docs.blockstack.org/"
+      "replacement": "https://docs.stacks.co/"
     }
   ],
   "timeout": "10s",
