--- a/src/common/navigation.yaml
+++ b/src/common/navigation.yaml
@@ -49,6 +49,9 @@ sections:
       - path: /build-apps
         pages:
           - path: /overview
+          - external:
+              href: https://github.com/blockstack/stacks.js/tree/master/migration-guide.md
+              title: Migrating from Blockstack.js
         sections:
           - title: Guides
             usePageTitles: true
@@ -68,23 +71,38 @@ sections:
             usePageTitles: true
             pages:
               - external:
-                  href: 'https://github.com/blockstack/stacks.js/tree/master/packages/auth#stacksauth'
-                  title: auth
-              - external:
                   href: 'https://github.com/blockstack/connect#readme'
                   title: connect
               - external:
-                  href: 'https://github.com/blockstack/stacks.js/tree/master/packages/storage#stacksstorage'
+                  href: 'https://github.com/blockstack/stacks.js/tree/master/packages/auth'
+                  title: auth
+              - external:
+                  href: 'https://github.com/blockstack/stacks.js/tree/master/packages/storage'
                   title: storage
               - external:
-                  href: 'https://github.com/blockstack/stacks.js/tree/master/packages/network#stacksnetwork'
-                  title: network
-              - external:
-                  href: 'https://github.com/blockstack/stacks.js/tree/master/packages/stacking#stacksstacking-'
-                  title: stacking
-              - external:
-                  href: 'https://github.com/blockstack/stacks.js/tree/master/packages/transactions#stackstransactions-'
+                  href: 'https://github.com/blockstack/stacks.js/tree/master/packages/transactions'
                   title: transactions
+              - external:
+                  href: 'https://github.com/blockstack/stacks.js/tree/master/packages/stacking'
+                  title: 'stacking'
+              - external:
+                  href: 'https://github.com/blockstack/stacks.js/tree/master/packages/keychain'
+                  title: 'keychain'
+              - external:
+                  href: 'https://github.com/blockstack/stacks.js/tree/master/packages/network'
+                  title: 'network'
+              - external:
+                  href: 'https://github.com/blockstack/stacks.js/tree/master/packages/encryption'
+                  title: 'encryption'
+              - external:
+                  href: 'https://github.com/blockstack/stacks.js/tree/master/packages/profile'
+                  title: 'profile'
+              - external:
+                  href: 'https://github.com/blockstack/stacks.js/tree/master/packages/common'
+                  title: common
+              - external:
+                  href: 'https://github.com/blockstack/stacks.js/tree/master/packages/bns'
+                  title: bns
 
           - title: Protocols
             usePageTitles: true
