--- a/src/common/navigation.yaml
+++ b/src/common/navigation.yaml
@@ -55,12 +55,13 @@ sections:
               - path: /guides/transaction-signing
               - path: /guides/data-storage
 
-          - title: Tutorials
+          - title: Example Apps
             usePageTitles: true
             pages:
-              - path: /tutorials/todos
-              - path: /tutorials/public-registry
-              - path: /tutorials/angular
+              - path: /examples/todos
+              - path: /examples/heystack
+              - path: /examples/public-registry
+              - path: /examples/angular
 
           - title: Stacks.js References
             usePageTitles: true
@@ -77,6 +78,9 @@ sections:
               - external:
                   href: 'https://github.com/blockstack/stacks.js/tree/master/packages/transactions'
                   title: transactions
+              - external:
+                  href: 'https://github.com/blockstack/stacks-blockchain-api/tree/master/client'
+                  title: blockchain-api-client
               - external:
                   href: 'https://github.com/blockstack/stacks.js/tree/master/packages/stacking'
                   title: 'stacking'
