--- a/src/common/navigation.yaml
+++ b/src/common/navigation.yaml
@@ -9,6 +9,7 @@ sections:
           - path: /regtest
           - path: /proof-of-transfer
           - path: /mining
+          - path: /microblocks
           - path: /accounts
           - path: /transactions
           - path: /network
