--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "remark-normalize-headings": "^2.0.0",
     "remark-parse": "^9.0.0",
     "remark-sectionize": "^1.1.1",
+    "remark-shiki-twoslash": "^1.4.2",
     "remark-slug": "6.0.0",
     "remark-squeeze-paragraphs": "^4.0.0",
     "remark-unwrap-images": "2.0.0",
