--- a/src/common/navigation.yaml
+++ b/src/common/navigation.yaml
@@ -43,6 +43,7 @@ sections:
             pages:
               - path: /hello-world-tutorial
               - path: /counter-tutorial
+              - path: /billboard-tutorial
               - path: /testing-contracts
       - path: /build-apps
         pages:
