--- a/.vale/styles/Google/WordList.yml
+++ b/.vale/styles/Google/WordList.yml
@@ -28,6 +28,7 @@ swap:
   Android device: Android-powered device
   android: Android
   API explorer: APIs Explorer
+  application: app
   approx\.: approximately
   authN: authentication
   authZ: authorization
@@ -37,6 +38,7 @@ swap:
   chapter: documents|pages|sections
   check box: checkbox
   check: select
+  CLI: command-line tool
   click on: click|click in
   Cloud: Google Cloud Platform|GCP
   Container Engine: Kubernetes Engine
@@ -73,6 +75,6 @@ swap:
   tablename: table name
   tablet: device
   touch: tap
-  url: URL
+  url:  URL
   vs\.: versus
   World Wide Web: web
