docs: final update to NFT tutorial

--- a/src/common/navigation.yaml
+++ b/src/common/navigation.yaml
@@ -7,7 +7,6 @@ sections:
           - path: /overview
           - path: /testnet
           - path: /proof-of-transfer
-          - path: /bitcoin
           - path: /mining
           - path: /accounts
           - path: /transactions
@@ -50,9 +49,8 @@ sections:
             pages:
               - path: /hello-world-tutorial
               - path: /counter-tutorial
-              - path: /billboard-tutorial
+              - path: /nft
               - path: /testing-contracts
-              - path: /my-own-nft
       - path: /build-apps
         pages:
           - path: /overview
