docs: removed severely outdated ecosystem section

--- a/src/common/navigation.yaml
+++ b/src/common/navigation.yaml
@@ -19,6 +19,12 @@ sections:
           - path: /technical-specs
           - path: /stacks-blockchain-api
         sections:
+          - title: Community
+            usePageTitles: true
+            pages:
+              - external:
+                  href: 'https://github.com/friedger/awesome-stacks-chain'
+                  title: 'Awesome Stacks'
           - title: Tutorials
             usePageTitles: true
             pages:
@@ -152,11 +158,4 @@ sections:
               - path: /language-keywords
               - path: /language-functions
 
-      - path: /ecosystem
-        pages:
-          - path: /overview #pbc et al
-          - path: /stacks-token
-          - external:
-              href: 'https://github.com/friedger/awesome-stacks'
-              title: Awesome Stacks
-          - path: /contributing
+      - path: /contributing
